# kosedge

./: .gitignore  .prettierignore  CONTRIBUTING.md  ENTERPRISE_CHECKLIST.md  QUICK_START.md  README.md  docker-compose.yml  kosedge.code-workspace  mdx-components.tsx  mdx.d.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.cursor/rules/: local-3000.mdc
.github/: BRANCH_PROTECTION.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  codeql.yml  deploy.yml  nightly-pipeline.yml  pr-check.yml
_archive/apps_api_backup/model-service/: Dockerfile  pyproject.toml
_archive/apps_api_backup/model-service/src/: celery_app.py  celerybeat_schedule.py  db.py  main.py  tasks.py
_archive/apps_api_backup/model-service/src/services/: odds_api.py
app/: globals.css  page.tsx
app/edge-board/: page.tsx
app/methodology/: page.tsx
components/: ArticleLayout.tsx  Container.tsx  EdgeBoard.tsx  EdgeBoardPreview.tsx  SiteHeader.tsx
content/: index.ts
docs/: API.md  ARCHITECTURE.md  CBB_KEI_MODEL_RUN_AND_METHODOLOGY.md  DEPLOYMENT.md  HISTORICAL_ODDS_CREDITS_ESTIMATE.md  ROADMAP_TO_9_5.md  SPORTSDATA_REPLAY_CAPTURE.md  STRUCTURE.md  SUBSCRIPTION_SITE_AUDIT.md  VERCEL.md
infra/: docker-compose.yml
lib/: edge-board-types.ts  featured-games.ts  game-overview.ts  mdx.ts  sports.ts
scripts/: dev-web-3000.sh  dev-web-clean.sh  fix-imports.sh  fix-web-components.sh  reorg-web.sh  restore-components.sh  run-web-3000.sh
(+1102 files in other folders)
